--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#0000574b</color>
+    <color name="colorPrimary">#009393</color>
+    <color name="colorPrimaryDark">#75a78a</color>
     <color name="colorAccent">#D81B60</color>
     <color name="QQblue">#0099FF</color>
     <color name="white">#ffffff</color>
