--- a/app/src/main/res/layout/menu_unit.xml
+++ b/app/src/main/res/layout/menu_unit.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
-    android:layout_width ="wrap_content"
     xmlns:android ="http://schemas.android.com/apk/res/android"
-    android:layout_height ="wrap_content">
-
-    <TableRow android:layout_width="wrap_content">
-
+    android:layout_width ="match_parent"
+    android:layout_height ="wrap_content"
+    android:stretchColumns="2,"
+    android:shrinkColumns="0">
+    <TableRow>
+        <TextView
+            android:text=""></TextView>
         <RelativeLayout
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:layout_height="wrap_content"
             android:paddingLeft="8dp"
+            android:paddingTop="8dp"
             android:paddingRight="8dp"
-            >
+            android:paddingBottom="8dp">
+
             <ImageView
                 android:id="@+id/img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="fitXY"
                 android:background="@color/white"
-                ></ImageView>
+                android:scaleType="fitXY"></ImageView>
         </RelativeLayout>
 
         <TextView
             android:id="@+id/name"
-            android:textSize="38px"
             android:layout_width="150dp"
-            android:layout_marginTop="40px"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_span="4"
+            android:textSize="15sp"></TextView>
+        <TextView
+            android:text=""></TextView>
     </TableRow>
 </TableLayout>
