完成了menu的弹出和收缩动画

--- a/app/src/main/res/layout/pop_menu.xml
+++ b/app/src/main/res/layout/pop_menu.xml
@@ -3,6 +3,7 @@
     android:layout_width="130dp"
     android:layout_height="wrap_content"
     android:background="#ffffff"
+    android:id="@+id/popback"
     android:orientation="vertical" >
 
     <ListView
