--- a/app/src/main/res/anim/pop_enter_anim.xml
+++ b/app/src/main/res/anim/pop_enter_anim.xml
@@ -3,8 +3,8 @@
 
     <translate
         android:duration="200"
-        android:fromYDelta="100%p"
-        android:toYDelta="0" />
+        android:fromXDelta="100%p"
+        android:toXDelta="0" />
     <alpha
         android:duration="200"
         android:fromAlpha="0.0"
