--- a/app/src/main/res/anim/pop_exit_anim.xml
+++ b/app/src/main/res/anim/pop_exit_anim.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="200"
-        android:fromYDelta="0"
-        android:toYDelta="50%p" />
+        android:fromXDelta="0"
+        android:toXDelta="50%p" />
     <alpha
         android:duration="200"
         android:fromAlpha="1.0"
