--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:singleLine="true"
-            android:text="设备列表"
+            android:text="@string/devicelist"
             android:textColor="@color/white"
             android:textSize="15sp" />
 
