--- a/app/src/main/res/layout/activity_device_situation.xml
+++ b/app/src/main/res/layout/activity_device_situation.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:singleLine="true"
-            android:text="设备参数"
+            android:text="@string/devicedata"
             android:textColor="@color/white"
             android:textSize="15sp" />
     </android.support.v7.widget.Toolbar>
@@ -36,7 +36,7 @@
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:textColor="@color/black"
-            android:text="设备号 : "/>
+            android:text="@string/deviceidl"/>
 
         <EditText
             android:id="@+id/idEditText"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
-            android:text="设备类型 : "
+            android:text="@string/devicetype"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:text="所属区域 : "
+        android:text="@string/area"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
-            android:text="所属防区 : "
+            android:text="@string/defarea"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -124,7 +124,7 @@
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:textColor="@color/black"
-            android:text="设备地址 : "/>
+            android:text="@string/devicelocation"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -137,7 +137,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="42dp"
-                android:hint="当前位置(默认)或选择新位置" />
+                android:hint="@string/chooseaddress" />
             <ImageView
                 android:id="@+id/choose_img"
                 android:layout_alignParentRight="true"
@@ -162,7 +162,7 @@
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:textColor="@color/black"
-            android:text="ip地址 : "/>
+            android:text="@string/ipaddress"/>
 
         <EditText
             android:id="@+id/ip_EditText"
@@ -185,7 +185,7 @@
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:textColor="@color/black"
-            android:text="相关参数 : "/>
+            android:text="@string/relativedata"/>
 
         <EditText
             android:id="@+id/about_EditText"
@@ -208,7 +208,7 @@
             android:layout_gravity="center_horizontal"
             android:textSize="18sp"
             android:layout_marginBottom="5dp"
-            android:text="提  交" />
+            android:text="@string/submit" />
     </LinearLayout>
 
 </LinearLayout>
