--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -12,7 +12,7 @@
     </com.amap.api.maps.MapView>
 
     <Button
-        android:text="确认选点"
+        android:text="@string/confirmpoint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/doneSelect"
