--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -15,11 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_toLeftOf="@+id/check_img"
+        android:layout_marginRight="5sp"
         android:layout_toStartOf="@+id/check_img"
+        android:layout_toLeftOf="@+id/check_img"
         android:textColor="@color/red"
-        android:textSize="15sp"
-        android:layout_marginRight="5sp"/>
+        android:textSize="15sp" />
+
     <ImageView
         android:id="@+id/check_img"
         android:layout_width="20dp"
