--- a/app/src/main/res/layout/activity_solve.xml
+++ b/app/src/main/res/layout/activity_solve.xml
@@ -7,7 +7,7 @@
 
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/devicesituationbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:minHeight="?attr/actionBarSize"
