--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,24 +8,24 @@ android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y400" />
+        android:layout_height="@dimen/dp_150" />
 
     <TextView
         android:id="@+id/app_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/dp_70"
         android:text="@string/app_name"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="@dimen/sp_30"
         android:textColor="@color/white"
         />
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/y150"
-    android:layout_marginLeft="@dimen/x80"
-    android:layout_marginRight="@dimen/x80"
-    android:layout_marginTop="@dimen/x50">
+    android:layout_height="@dimen/dp_45"
+    android:layout_marginLeft="@dimen/dp_30"
+    android:layout_marginRight="@dimen/dp_30"
+    android:layout_marginTop="@dimen/dp_10">
 
     <EditText
         android:id="@+id/et_account"
@@ -33,28 +33,29 @@ android:orientation="vertical">
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/x20"
-        android:layout_marginLeft="@dimen/x10"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_10"
         android:background="@null"
         android:hint="@string/account"
         android:maxLines="1"
         android:textColor="@android:color/black"
         android:textColorHint="@color/grey_light"
-        android:textSize="@dimen/x45"/>
+        android:textSize="@dimen/sp_15"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x5"
+        android:layout_height="@dimen/dp_2"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/x1"
+        android:layout_marginLeft="@dimen/dp_10"
         android:background="@color/grey_light"/>
 </RelativeLayout>
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/x150"
-    android:layout_marginLeft="@dimen/x80"
-    android:layout_marginRight="@dimen/x80">
+    android:layout_height="@dimen/dp_45"
+    android:layout_marginLeft="@dimen/dp_30"
+    android:layout_marginRight="@dimen/dp_30"
+    android:layout_marginTop="@dimen/dp_10">
 
     <EditText
         android:id="@+id/et_password"
@@ -62,19 +63,19 @@ android:orientation="vertical">
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/x20"
-        android:layout_marginLeft="@dimen/x10"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_10"
         android:background="@null"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:maxLines="1"
         android:textColor="@android:color/black"
         android:textColorHint="@color/grey_light"
-        android:textSize="@dimen/x45"/>
+        android:textSize="@dimen/sp_15"/>
     <ImageView
         android:id="@+id/iv_see_password"
-        android:layout_width="@dimen/x70"
-        android:layout_height="@dimen/x40"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_16"
         android:src="@drawable/seepassword"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
@@ -83,29 +84,28 @@ android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x5"
+        android:layout_height="@dimen/dp_2"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="@dimen/dp_10"
         android:background="@color/grey_light" />
 </RelativeLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/x120"
-    android:layout_marginRight="@dimen/x30"
-    android:layout_marginTop="@dimen/x30"
-    android:paddingBottom="@dimen/x5"
-    android:paddingTop="@dimen/x5"
+    android:layout_marginLeft="@dimen/dp_35"
+    android:layout_marginRight="@dimen/dp_1"
+    android:layout_marginTop="@dimen/dp_15"
+    android:paddingBottom="@dimen/dp_5"
+    android:paddingTop="@dimen/dp_5"
     android:orientation="horizontal"
     android:gravity="center"
     >
     <CheckBox
         android:id="@+id/checkBox_password"
-        android:padding="@dimen/x5"
-        android:textSize="@dimen/x35"
+        android:padding="@dimen/dp_5"
+        android:textSize="@dimen/sp_13"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_weight="1"
@@ -114,8 +114,8 @@ android:orientation="vertical">
         android:textColor="@color/grey" android:checked="false"/>
     <CheckBox
         android:id="@+id/checkBox_login"
-        android:padding="@dimen/x5"
-        android:textSize="@dimen/x35"
+        android:padding="@dimen/dp_5"
+        android:textSize="@dimen/sp_13"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_weight="1"
@@ -129,14 +129,14 @@ android:orientation="vertical">
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/x100"
-        android:layout_marginTop="@dimen/x45"
-        android:layout_marginRight="@dimen/x100"
+        android:layout_marginLeft="@dimen/dp_35"
+        android:layout_marginTop="@dimen/dp_25"
+        android:layout_marginRight="@dimen/dp_35"
         android:background="@mipmap/login"
-        android:paddingTop="@dimen/x5"
-        android:paddingBottom="@dimen/x5"
+        android:paddingTop="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_10"
         android:text="@string/login"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/x55" />
+        android:textSize="@dimen/sp_20" />
 
 </LinearLayout>
