--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,23 +16,23 @@
 
     <RelativeLayout
         android:id="@+id/back"
-        android:layout_width="41dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="13dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_60"
         android:background="@mipmap/greysquare">
 
         <ImageView
             android:id="@+id/btn_menu"
-            android:layout_width="25dp"
-            android:layout_height="27dp"
+            android:layout_width="@dimen/dp_26"
+            android:layout_height="@dimen/dp_26"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="7dp"
+            android:layout_marginRight="@dimen/dp_7"
             android:scaleType="fitXY"
             android:src="@mipmap/btn_menu" />
 
@@ -45,7 +45,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="59dp"></com.example.jsrgjhl.hlapp.View.SegmentView>
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_50"></com.example.jsrgjhl.hlapp.View.SegmentView>
 </RelativeLayout>
