--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/aboutUsBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/dp_40"
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:navigationIcon="@mipmap/back7"
@@ -18,7 +18,7 @@
     </android.support.v7.widget.Toolbar>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y400" />
+        android:layout_height="@dimen/dp_230" />
 
         <TextView
             android:gravity="center_horizontal"
@@ -29,7 +29,7 @@
             android:text="@string/aboutus"/>
 
         <TextView
-            android:layout_marginTop="@dimen/x37"
+            android:layout_marginTop="@dimen/dp_30"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
