--- a/app/src/main/res/layout/activity_about_version.xml
+++ b/app/src/main/res/layout/activity_about_version.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/aboutVersionBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/dp_40"
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:navigationIcon="@mipmap/back7"
@@ -18,7 +18,7 @@
     </android.support.v7.widget.Toolbar>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y400" />
+        android:layout_height="@dimen/dp_230" />
 
     <ImageView
         android:layout_gravity="center_horizontal"
@@ -27,7 +27,7 @@
         android:src="@mipmap/ic_launcher"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x37" />
+        android:layout_height="@dimen/dp_30" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
