--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -100,12 +100,48 @@
                 android:textCursorDrawable="@color/black"
                 android:background="@null"
                 android:gravity="right"
+                android:inputType="textPassword"
                 android:textColor="@color/grey_light"
                 android:padding="5dip"
                 android:textColorHint="#AAAAAA"
                 android:textSize="18sp" />
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10px"
+            android:background="@drawable/bg_edittext_selector">
+
+            <TextView
+                android:id="@+id/label3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp"
+                android:textColor="@color/black"
+                android:text="@string/confrimpassword"
+                android:textSize="18sp" />
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="40dip"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/label3"
+                android:textCursorDrawable="@color/black"
+                android:background="@null"
+                android:gravity="right"
+                android:inputType="textPassword"
+                android:textColor="@color/grey_light"
+                android:padding="5dip"
+                android:textColorHint="#AAAAAA"
+                android:textSize="18sp" />
+        </RelativeLayout>
         <Button
             android:id="@+id/confirm_Btn"
             android:layout_width="300dp"
