--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,31 @@
         android:background="@mipmap/greysquare">
 
         <ImageView
-            android:id="@+id/btn_menu"
+        android:id="@+id/btn_menu"
+        android:layout_width="@dimen/dp_26"
+        android:layout_height="@dimen/dp_26"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/dp_7"
+        android:scaleType="fitXY"
+        android:src="@mipmap/btn_menu" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/warningback"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_120"
+        android:background="@mipmap/greysquare">
+
+        <ImageView
+            android:id="@+id/btn_warning"
             android:layout_width="@dimen/dp_26"
             android:layout_height="@dimen/dp_26"
             android:layout_alignParentRight="true"
