--- a/app/src/main/res/layout/operate_record_list.xml
+++ b/app/src/main/res/layout/operate_record_list.xml
@@ -51,6 +51,26 @@
         android:layout_alignBaseline="@+id/solutioncontext"
         android:textColor="@color/black"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/deltime"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
+        android:text="处理时间"
+        android:textColor="@color/list_text"
+        android:layout_below="@id/solutioncontext"/>
+    <TextView
+        android:id="@+id/deltimeTv"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:height="25dp"
+        android:layout_toRightOf="@id/deltime"
+        android:layout_below="@id/solutioncontexttv"
+        android:layout_alignBaseline="@+id/deltime"
+        android:layout_margin="5dp"
+        android:textSize="15sp"
+        android:textColor="@color/black" />
 
 
 </RelativeLayout>
