--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -59,25 +59,18 @@
         android:layout_alignLeft="@+id/situation_tv"
         android:layout_alignStart="@+id/situation_tv"
         android:layout_below="@+id/situation_img"
+        android:maxEms="10"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:textColor="@color/black"
         android:textSize="13sp" />
-    <TextView
-        android:id="@+id/device_setting_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/QQblue"
-        android:layout_alignTop="@id/address_tv"
-        android:layout_marginRight="40dp"
-        android:textSize="15sp"
-        android:clickable="true"
-        android:layout_alignParentRight="true"/>
 
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/device_setting_tv"
+        android:layout_alignTop="@+id/address_tv"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:src="@mipmap/more" />
