--- a/app/src/main/res/layout/record_warninglist.xml
+++ b/app/src/main/res/layout/record_warninglist.xml
@@ -3,14 +3,15 @@
     android:background="@color/white"
     android:layout_height="wrap_content">
 
-    <TextView
+    <ImageView
         android:id="@+id/timeimg"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
-        android:text="警报时间"
-        android:textColor="@color/list_text" />
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/clock" />
     <TextView
         android:id="@+id/timetv"
         android:layout_width="wrap_content"
@@ -22,15 +23,17 @@
         android:textSize="15sp"
         android:textColor="@color/black" />
 
-    <TextView
+    <ImageView
         android:id="@+id/addressimg"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
-        android:textColor="@color/list_text"
-        android:text="设备地点"
-        android:layout_below="@id/timeimg"/>
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/timeimg"
+        android:scaleType="fitXY"
+        android:src="@mipmap/location" />
+
     <TextView
         android:id="@+id/addresstv"
         android:layout_width="wrap_content"
@@ -43,15 +46,16 @@
         android:textColor="@color/black"
         android:layout_height="wrap_content" />
 
-    <TextView
+    <ImageView
         android:id="@+id/idimg"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginLeft="20dp"
-        android:text="设备编号"
-        android:layout_marginRight="10dp"
-        android:textColor="@color/list_text"
-        android:layout_below="@id/addressimg"/>
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/addressimg"
+        android:scaleType="fitXY"
+        android:src="@mipmap/devicenum" />
     <TextView
         android:id="@+id/idtv"
         android:layout_width="wrap_content"
