--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -66,6 +66,9 @@
         android:layout_alignTop="@id/addressimg"
         android:layout_toRightOf="@id/addressimg"
         android:layout_below="@id/timetv"
+        android:maxEms="10"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_margin="5dp"
         android:textSize="15sp"
         android:layout_alignBaseline="@+id/addressimg"
