--- a/app/src/main/res/layout/activity_about_version.xml
+++ b/app/src/main/res/layout/activity_about_version.xml
@@ -22,9 +22,9 @@
 
     <ImageView
         android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@mipmap/launchernew"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_30" />
