--- a/app/src/main/res/layout/activity_device_situation.xml
+++ b/app/src/main/res/layout/activity_device_situation.xml
@@ -44,6 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
+            android:background="@null"
+            android:drawableBottom="@drawable/edittext_line"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
@@ -136,6 +138,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="10dp"
+                android:maxEms="8"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:background="@null"
+                android:drawableBottom="@drawable/edittext_line"
                 android:layout_marginRight="42dp"
                 android:hint="@string/chooseaddress" />
             <ImageView
@@ -173,6 +181,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:background="@null"
+            android:drawableBottom="@drawable/edittext_line"
             android:layout_gravity="center_vertical"
             android:layout_weight="1" />
     </LinearLayout>
@@ -190,6 +200,7 @@
             android:layout_gravity="center_horizontal"
             android:textSize="18sp"
             android:layout_marginBottom="5dp"
+            android:textColor="@color/white"
             android:text="@string/submit" />
     </LinearLayout>
 
