--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/list_text"
+    android:background="@drawable/info_window_shape"
     android:layout_height="wrap_content">
 
     <TextView
@@ -53,7 +53,7 @@
             android:text="设备参数"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:background="@mipmap/blue_block" />
+            android:background="@drawable/info_window_shape" />
         <Button
             android:id="@+id/btn_camera"
             android:layout_width="90dp"
@@ -62,7 +62,7 @@
             android:text="查看监控"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:background="@mipmap/blue_block" />
+            android:background="@drawable/info_window_shape" />
     </RelativeLayout>
 
     <ImageView
