--- a/app/src/main/res/layout/warninglist.xml
+++ b/app/src/main/res/layout/warninglist.xml
@@ -8,6 +8,6 @@
 
     <ListView
         android:id="@+id/warninglist"
-        android:layout_width="210dp"
-        android:layout_height="wrap_content" />
+        android:layout_width="180dp"
+        android:layout_height="220dp" />
 </LinearLayout>
