--- a/app/src/main/res/layout/record_warninglist.xml
+++ b/app/src/main/res/layout/record_warninglist.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="210dp"
+    android:layout_width="wrap_content"
     android:background="@color/list_record"
     android:layout_height="wrap_content"
     android:layout_marginRight="5dp">
@@ -45,6 +45,8 @@
         android:layout_below="@+id/timetv"
         android:textColor="@color/black"
         android:maxLines="1"
+        android:maxEms="10"
+        android:ellipsize="end"
         android:textSize="15sp" />
 
     <ImageView
